Fix spacing for stacked description list

--- a/src/nationalarchives/utilities/lists/_index.scss
+++ b/src/nationalarchives/utilities/lists/_index.scss
@@ -147,6 +147,12 @@ ol {
       background: none;
     }
   }
+
+  &:has(> dt > .fa-solid, > dt > .fa-brands):not(&--zebra) {
+    > dd {
+      padding-left: spacing.space(2);
+    }
+  }
 }
 
 .tna-dl {
